# TVC_ws

./: .gitmodules  README.md  run.sh
install/: local_setup.sh  setup.sh
install/px4_msgs/share/px4_msgs/: local_setup.sh  package.sh
install/px4_msgs/share/px4_msgs/cmake/: export_px4_msgs__rosidl_generator_cExport.cmake  export_px4_msgs__rosidl_generator_cppExport.cmake  export_px4_msgs__rosidl_generator_pyExport-noconfig.cmake  export_px4_msgs__rosidl_generator_pyExport.cmake  px4_msgs__rosidl_typesupport_cppExport.cmake  px4_msgs__rosidl_typesupport_introspection_cExport.cmake  px4_msgs__rosidl_typesupport_introspection_cppExport.cmake
install/px4_ros_com/lib/px4_ros_com/: debug_vect_advertiser  offboard_control  offboard_control_srv  sensor_combined_listener  vehicle_gps_position_listener
install/px4_ros_com/share/ament_index/resource_index/parent_prefix_path/: px4_ros_com
install/px4_ros_com/share/px4_ros_com/: package.sh
install/px4_test/lib/px4_test/: gazebo_clock
install/px4_test/share/px4_test/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/px4_test/share/px4_test/cmake/: export_px4_testExport-noconfig.cmake
install/px4_test/share/px4_test/launch/: px4_test_launch.py
install/test_pkg/share/test_pkg/: local_setup.sh  package.bash  package.ps1  package.sh  package.xml  package.zsh
install/tvc_controller/lib/tvc_controller/: lqr_px4_controller
install/tvc_controller/share/tvc_controller/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/tvc_controller/share/tvc_controller/launch/: lqr.launch.py
log/: latest_build  latest_extensions  latest_list
src/px4_test/: CMakeLists.txt
src/px4_test/config/: px4.yaml
src/px4_test/scripts/: run.sh
src/px4_test/src/: gazebo_clock.cpp  px4_test_node.cpp
src/px4_test/src/lib/: frame_transforms.cpp
src/tvc_controller/: package.xml  setup.cfg  setup.py
src/tvc_controller/config/: tvc_params.yaml
src/tvc_controller/launch/: lqr.launch.py
src/tvc_controller/models/tvc/: model.config  model.sdf
src/tvc_controller/scripts/: run.sh
src/tvc_controller/shell_scripts/: run.sh
src/tvc_controller/tvc_controller/: lqr.py  lqr_controller_node.py
src/tvc_controller_msgs/: CMakeLists.txt  package.xml
